--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -54,9 +54,11 @@
       <input type="text" name="name" placeholder="Full Name" required />
 
       <div class="email-otp-wrapper">
-        <input type="email" name="email" placeholder="Email Address" required />
-        <button type="button" id="otpBtn">Verify Email</button>
-      </div>
+  <input type="email" name="email" placeholder="Email Address" required />
+  <button type="button" id="otpBtn">Verify Email</button>
+</div>
+<div id="emailError" style="color: red; font-size: 0.9rem;"></div>
+
 
       <div id="otpSection" style="display: none;">
         <input type="text" name="otp" placeholder="Enter OTP" required />
