--- a/public/css/admin/createDeal.css
+++ b/public/css/admin/createDeal.css
@@ -262,6 +262,24 @@
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
 }
+.deal-spinner {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner-border {
+  width: 3rem;
+  height: 3rem;
+  border-width: 0.3em;
+}
 
 @media (max-width: 576px) {
   .card-img-top {
