--- a/views/admin/addpayment.ejs
+++ b/views/admin/addpayment.ejs
@@ -37,5 +37,7 @@
       <button type="submit">Submit Payment</button>
     </form>
   </div>
+     <%- include('../partials/footer', ) %>
+
 </body>
 </html>
