--- a/views/admin/availableStock.ejs
+++ b/views/admin/availableStock.ejs
@@ -56,5 +56,6 @@
 
   <!-- External JS only -->
   <script src="/js/admin/availableStock.js"></script>
+  <%- include('../partials/footer', ) %>
 </body>
 </html>
