--- a/views/admin/buyer-payment-details.ejs
+++ b/views/admin/buyer-payment-details.ejs
@@ -70,6 +70,7 @@
 
   </div>
   <script src="/js/admin/buyer-payment-details.js"></script>
+  <%- include('../partials/footer', ) %>
 </body>
 
 </html>
