--- a/views/admin/buyerDetails.ejs
+++ b/views/admin/buyerDetails.ejs
@@ -108,5 +108,6 @@
 
   <!-- External JS -->
   <script src="/js/admin/buyer-details.js" defer></script>
+  <%- include('../partials/footer', ) %>
 </body>
 </html>
