--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -123,6 +123,7 @@
     window.availableBrandData = <%- JSON.stringify(availableBrandData) %>;
     window.barChartData = <%- JSON.stringify(barChartData) %>;
   </script>
+   <%- include('../partials/footer', ) %>
 
   <!-- External JS -->
   <script src="/js/admin/dashboard.js"></script>
