--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -92,5 +92,6 @@
     window.availableBrandData = <%- JSON.stringify(availableBrandData) %>;
   </script>
   <script src="/js/admin/totalOrders.js"></script>
+  <%- include('../partials/footer', ) %>
 </body>
 </html>
