--- a/views/admin/soldDevice.ejs
+++ b/views/admin/soldDevice.ejs
@@ -75,5 +75,6 @@
     window.brandData = <%- JSON.stringify(brandBarData) %>;
   </script>
   <script src="/js/admin/soldDevices.js"></script>
+  <%- include('../partials/footer', ) %>
 </body>
 </html>
