--- a/views/buyer/deals.ejs
+++ b/views/buyer/deals.ejs
@@ -34,7 +34,7 @@
       <% }); %>
     </div>
   </div>
-
+  <%- include('../partials/footer', ) %>
   <script src="/js/buyer/deals.js"></script>
 </body>
 </html>
