--- a/views/buyer/orders.ejs
+++ b/views/buyer/orders.ejs
@@ -74,7 +74,7 @@
     </div>
 
   </div>
-
+  <%- include('../partials/footer', ) %>
   <script src="/js/buyer/order.js"></script>
 </body>
 </html>
