--- a/views/buyer/payment.ejs
+++ b/views/buyer/payment.ejs
@@ -59,7 +59,7 @@
   <span class="close-btn">&times;</span>
   <img class="modal-content" id="modalImage" />
 </div>
-
+  <%- include('../partials/footer', ) %>
   <script src="/js/buyer/paymentHistory.js"></script>
 </body>
 </html>
