--- a/views/buyer/manageOrder.ejs
+++ b/views/buyer/manageOrder.ejs
@@ -92,6 +92,7 @@
       <% } %>
     </div>
   </div>
+    <%- include('../partials/footer', ) %>
   <script src="/js/buyer/manageOrders.js"></script>
 </body>
 </html>
