--- a/views/buyer/profile.ejs
+++ b/views/buyer/profile.ejs
@@ -61,7 +61,7 @@
       ✏️ Edit Profile
     </a>
   </div>
-
+  <%- include('../partials/footer', ) %>
   <script src="/js/buyer/profile.js"></script>
 </body>
 </html>
